# openai-generate-pr-description

./: .pre-commit-config.yaml  README.md  action.yml  cspell.json  pyproject.toml
.claude/commands/: auto-commit.md  bump-version.md
.github/: copilot-instructions.md
.github/workflows/: auto-assign.yml  auto-merge.yml  check-version.yml  ci.yml  generate-pr-description.yml  pre-commit.yml  prek.yml  release.yml  update-license-year.yml
docs/: README.ja.md
docs/superpowers/plans/: 2026-05-17-fix-pr-title-label-leakage.md  2026-05-17-workflow-result.md
docs/superpowers/specs/: 2026-04-06-openai-to-openrouter-design.md  2026-05-17-workflow-result-design.md
scripts/: generate_pr_description.py
tests/: test_generate_pr_description.py
