[project]
name = "generate-pr-description-action"
version = "2.0.1"
description = "Generate PR title and description using OpenRouter API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "openai==2.31.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "openai==2.31.0",
]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "C"]
ignore = ["E501"]  # 長い行を無視する場合

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"] # 未使用インポートを許容
